Fixed some off centered items in character stat and equipment sheets, and added card-item class to gold value so it is the same size as all other items.

--- a/src/index.css
+++ b/src/index.css
@@ -155,7 +155,7 @@ h3 {
   border-bottom: 5px solid black;
   border-radius: 20px;
   padding-left: 10px;
-  padding-right: 14px;
+  padding-right: 10px;
 }
 
 h4 {
@@ -247,7 +247,7 @@ main {
 p {
   font-size: 20px;
   margin: 5px;
-  margin-left: 25px;
+  /* margin-left: 25px; */
   width: fit-content;
   border-radius: 10px;
 }
@@ -972,7 +972,7 @@ footer {
   p {
     font-size: 12px;
     margin: 5px;
-    margin-left: 30px;
+    /* margin-left: 30px; */
     line-height: 150%;
   }
 
@@ -1016,7 +1016,7 @@ footer {
 
   .card-header {
     font-size: 25px;
-    margin-left: 15px;
+    /* margin-left: 15px; */
     width: fit-content;
   }
 
